src/objects/Training_Series__c.object
<CustomObject>
    <fields>
        <fullName>Account_Specific_LOA_Verbiage__c</fullName>
        <formula>Account__r.Entity_specific_LOA_verbiage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account-Specific LOA Verbiage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Series</relationshipLabel>
        <relationshipName>Training_Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Series (Billing Contact)</relationshipLabel>
        <relationshipName>Training_Series1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Currency</label>
        <referenceTo>Currency_Detail__c</referenceTo>
        <relationshipLabel>Training Series</relationshipLabel>
        <relationshipName>Training_Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_Additional_Attendee__c</fullName>
        <label>Cost per Additional Attendee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Series</relationshipLabel>
        <relationshipName>Training_Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOA_Pending_Approval__c</fullName>
        <label>LOA Pending Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOA_Sent_Date__c</fullName>
        <label>LOA Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Received_Date__c</fullName>
        <formula>Account__r.NDA_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Remaining__c</fullName>
        <label>Number of Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.Legacy_Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Training Series</relationshipLabel>
        <relationshipName>Training_Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payable_Period__c</fullName>
        <label>Payable Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Series1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Terms__c</fullName>
        <formula>Opportunity__r.Account.Special_Billing_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Billing Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_No__c</fullName>
        <formula>Account__r.Tax_Exempt_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Exempt No.</label>
        <type>Text</type>
    </fields>
    <label>Training Series</label>
    <nameField>
        <label>Training Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>